--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <meta property="og:title" content="Приглашение на свадьбу 21.06.2025">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://static.tildacdn.com/tild3538-3035-4661-a338-343739643662/_.jpg"> <!--/metatextblock-->
+    <meta property="og:image" content="https://static.tildacdn.com/tild3538-3035-4661-a338-343739643662/_.jpg">
+    <!--/metatextblock-->
     <meta name="format-detection" content="telephone=no">
     <meta http-equiv="x-dns-prefetch-control" content="on">
     <link rel="dns-prefetch" href="https://ws.tildacdn.com/">
@@ -5602,30 +5603,7 @@
                                 alt="" imgfield="tn_img_1737066434086"
                                 src="./Приглашение на свадьбу _Наш день__files/_.png"> </div>
                     </div>
-                    <div class="t396__elem tn-elem tn-elem__8661004461737067342223 t-sbs-anim_started"
-                        data-elem-id="1737067342223" data-elem-type="image" data-field-top-value="852"
-                        data-field-left-value="706" data-field-height-value="95" data-field-width-value="95"
-                        data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid"
-                        data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value="px"
-                        data-field-widthunits-value="px" data-animate-mobile="y" data-animate-sbs-event="intoview"
-                        data-animate-sbs-trg="1" data-animate-sbs-trgofst="0" data-animate-sbs-loop="loop"
-                        data-animate-sbs-opts="[{&#39;mx&#39;:0,&#39;my&#39;:0,&#39;sx&#39;:1,&#39;sy&#39;:1,&#39;op&#39;:1,&#39;ro&#39;:0,&#39;ti&#39;:0,&#39;ea&#39;:&#39;0&#39;,&#39;dt&#39;:0},{&#39;mx&#39;:0,&#39;my&#39;:0,&#39;sx&#39;:1.2,&#39;sy&#39;:1.2,&#39;op&#39;:1,&#39;ro&#39;:0,&#39;ti&#39;:1000,&#39;ea&#39;:&#39;0&#39;,&#39;dt&#39;:0},{&#39;mx&#39;:0,&#39;my&#39;:0,&#39;sx&#39;:1,&#39;sy&#39;:1,&#39;op&#39;:1,&#39;ro&#39;:0,&#39;ti&#39;:1000,&#39;ea&#39;:&#39;0&#39;,&#39;dt&#39;:0}]"
-                        data-field-filewidth-value="1680" data-field-fileheight-value="1680"
-                        data-field-top-res-320-value="693" data-field-left-res-320-value="263"
-                        data-field-width-res-320-value="81" data-field-top-res-480-value="876"
-                        data-field-left-res-480-value="345" data-field-top-res-640-value="863"
-                        data-field-left-res-640-value="424" data-field-top-res-960-value="862"
-                        data-field-left-res-960-value="585"
-                        data-fields="img,width,filewidth,fileheight,top,left,container,axisx,axisy,widthunits,leftunits,topunits"
-                        style="left: 826px; top: 852px; width: 95px;">
-                        <div class="tn-atom__sbs-anim-wrapper" style="display: table; width: inherit; height: inherit;"
-                            id="sbs-866100446-1737067342223">
-                            <div class="tn-atom"> <img class="tn-atom__img t-img loaded"
-                                    data-original="https://static.tildacdn.com/tild3439-3161-4732-a363-663136326635/photo.png"
-                                    alt="" imgfield="tn_img_1737067342223"
-                                    src="./Приглашение на свадьбу _Наш день__files/photo(3).png"> </div>
-                        </div>
-                    </div>
+
                     <div class="t396__elem tn-elem tn-elem__8661004461701274742939 t-animate t-animate_started"
                         data-elem-id="1701274742939" data-elem-type="image" data-field-top-value="499"
                         data-field-left-value="316" data-field-height-value="568" data-field-width-value="568"
@@ -5642,9 +5620,8 @@
                         data-fields="img,width,filewidth,fileheight,top,left,container,axisx,axisy,widthunits,leftunits,topunits"
                         style="left: 436px; top: 499px; width: 568px; transform: translate3d(0px, 100px, 0px); transition-delay: 1.1s; transition-duration: 3s;"
                         data-observer-ready="true">
-                        <div class="tn-atom"> <img class="tn-atom__img t-img loaded"
-                                
-                                alt="" imgfield="tn_img_1701274742939"
+                        <div class="tn-atom"> <img class="tn-atom__img t-img loaded" alt=""
+                                imgfield="tn_img_1701274742939"
                                 src="./Приглашение на свадьбу _Наш день__files/_2025.png"> </div>
                     </div>
                     <div class="t396__elem tn-elem tn-elem__8661004461737065347950 t-animate t-animate_started"
@@ -5714,54 +5691,16 @@
                         data-animate-delay="1.5" data-animate-distance="100" data-animate-mobile="y"
                         data-field-top-res-320-value="982" data-field-left-res-320-value="-4"
                         data-field-height-res-320-value="170" data-field-width-res-320-value="329"
-                        data-field-container-res-320-value="grid" data-field-top-res-480-value="1170"
+                        data-field-container-res-320-value="grid" data-field-top-res-480-value="1200"
                         data-field-left-res-480-value="-40" data-field-left-res-640-value="40"
-                        data-field-top-res-960-value="1170" data-field-left-res-960-value="200"
+                        data-field-top-res-960-value="1200" data-field-left-res-960-value="200"
                         data-fields="width,height,top,left,container,axisx,axisy,widthunits,heightunits,leftunits,topunits"
                         style="width: 560px; left: 440px; top: 1200px; height: 170px; transform: translate3d(0px, 100px, 0px); transition-delay: 1.5s; transition-duration: 3s;"
                         data-observer-ready="true">
                         <div class="tn-atom tn-atom__html">
                             <script
                                 src="./Приглашение на свадьбу _Наш день__files/4d992b4dce0c1fea4827f40a11819dbc.js"></script>
-                            <div id="timer4d992b4dce0c1fea4827f40a11819dbc"
-                                style="min-width: 251px; height: 41px; text-align: center; transform: translate3d(0px, 0px, 0px);">
-                                <span class="timer-element" id="timer-element-4d992b4dce0c1fea4827f40a11819dbc-days"
-                                    style="display: inline-block; line-height: 1; margin: 0px;"><span
-                                        id="timer-number-4d992b4dce0c1fea4827f40a11819dbc-days"
-                                        style="display: inline-block; line-height: 1; margin: 0px; font-size: 31px; color: rgb(86, 86, 86); font-family: Comfortaa;"><span
-                                            id="timer-number-value-4d992b4dce0c1fea4827f40a11819dbc-days">70</span></span><span
-                                        id="timer-text-4d992b4dce0c1fea4827f40a11819dbc-days"
-                                        style="display: block; line-height: 1; margin: 0px; font-size: 10px; color: rgb(86, 86, 86); font-family: Comfortaa;">дней</span></span><span
-                                    class="timer-separator" id="timer-separator-4d992b4dce0c1fea4827f40a11819dbc-hours"
-                                    style="display: inline-block; vertical-align: top; line-height: 1; margin: 0px; padding: 0px 15px; font-size: 31px; color: rgb(86, 86, 86); font-family: Comfortaa;">:</span><span
-                                    class="timer-element" id="timer-element-4d992b4dce0c1fea4827f40a11819dbc-hours"
-                                    style="display: inline-block; line-height: 1; margin: 0px;"><span
-                                        id="timer-number-4d992b4dce0c1fea4827f40a11819dbc-hours"
-                                        style="display: inline-block; line-height: 1; margin: 0px; font-size: 31px; color: rgb(86, 86, 86); font-family: Comfortaa;"><span
-                                            id="timer-number-value-4d992b4dce0c1fea4827f40a11819dbc-hours">7</span></span><span
-                                        id="timer-text-4d992b4dce0c1fea4827f40a11819dbc-hours"
-                                        style="display: block; line-height: 1; margin: 0px; font-size: 10px; color: rgb(86, 86, 86); font-family: Comfortaa;">часов</span></span><span
-                                    class="timer-separator"
-                                    id="timer-separator-4d992b4dce0c1fea4827f40a11819dbc-minutes"
-                                    style="display: inline-block; vertical-align: top; line-height: 1; margin: 0px; padding: 0px 15px; font-size: 31px; color: rgb(86, 86, 86); font-family: Comfortaa;">:</span><span
-                                    class="timer-element" id="timer-element-4d992b4dce0c1fea4827f40a11819dbc-minutes"
-                                    style="display: inline-block; line-height: 1; margin: 0px;"><span
-                                        id="timer-number-4d992b4dce0c1fea4827f40a11819dbc-minutes"
-                                        style="display: inline-block; line-height: 1; margin: 0px; font-size: 31px; color: rgb(86, 86, 86); font-family: Comfortaa;"><span
-                                            id="timer-number-value-4d992b4dce0c1fea4827f40a11819dbc-minutes">28</span></span><span
-                                        id="timer-text-4d992b4dce0c1fea4827f40a11819dbc-minutes"
-                                        style="display: block; line-height: 1; margin: 0px; font-size: 10px; color: rgb(86, 86, 86); font-family: Comfortaa;">минут</span></span><span
-                                    class="timer-separator"
-                                    id="timer-separator-4d992b4dce0c1fea4827f40a11819dbc-secundes"
-                                    style="display: inline-block; vertical-align: top; line-height: 1; margin: 0px; padding: 0px 15px; font-size: 31px; color: rgb(86, 86, 86); font-family: Comfortaa;">:</span><span
-                                    class="timer-element" id="timer-element-4d992b4dce0c1fea4827f40a11819dbc-secundes"
-                                    style="display: inline-block; line-height: 1; margin: 0px;"><span
-                                        id="timer-number-4d992b4dce0c1fea4827f40a11819dbc-secundes"
-                                        style="display: inline-block; line-height: 1; margin: 0px; font-size: 31px; color: rgb(86, 86, 86); font-family: Comfortaa;"><span
-                                            id="timer-number-value-4d992b4dce0c1fea4827f40a11819dbc-secundes">24</span></span><span
-                                        id="timer-text-4d992b4dce0c1fea4827f40a11819dbc-secundes"
-                                        style="display: block; line-height: 1; margin: 0px; font-size: 10px; color: rgb(86, 86, 86); font-family: Comfortaa;">секунд</span></span>
-                            </div>
+
                         </div>
                     </div>
                     <div class="t396__elem tn-elem tn-elem__8661004461737066570522 t-animate t-animate_started"
@@ -6285,8 +6224,8 @@
                         data-fields="top,left,width,height,container,axisx,axisy,widthunits,leftunits,topunits"
                         style="top: 250px; left: 576px; width: 289px; height: auto; transform: translate3d(0px, 100px, 0px); transition-delay: 0.7s; transition-duration: 3s;"
                         data-observer-ready="true">
-                        <div class="tn-atom" field="tn_text_1684927346397" style="line-height: 31px;">"Forest
-                            Dew"<br>Луговая ул., 17,<br>посёлок Быково<br><br></div>
+                        <div class="tn-atom" field="tn_text_1684927346397" style="line-height: 31px;">Ресторан "Золотой
+                            берег"<br>База отдыха Бережок,<br>посёлок Волжский<br><br></div>
                     </div>
                     <div class="t396__elem tn-elem tn-elem__8660833101737067754550 t-animate t-animate_started"
                         data-elem-id="1737067754550" data-elem-type="text" data-field-top-value="170"
@@ -6333,8 +6272,9 @@
                         data-fields="top,left,width,height,container,axisx,axisy,widthunits,leftunits,topunits"
                         style="top: 921px; left: 440px; width: 560px; height: auto; transform: translate3d(0px, 100px, 0px); transition-delay: 1.1s; transition-duration: 3s;"
                         data-observer-ready="true">
-                        <div class="tn-atom" style="line-height: 37px;"><a
-                                href="https://invitelove.ru/our_day#ndt-show-btn" style="color: inherit">На карте</a>
+                        <div class="tn-atom" style="line-height: 37px;">
+                            <a href="https://yandex.ru/maps/?ll=50.114068,53.418268&z=15" style="color: inherit">Открыть
+                                на карте</a>
                         </div>
                     </div>
                 </div>
@@ -7352,8 +7292,8 @@
                         data-fields="top,left,width,height,container,axisx,axisy,widthunits,leftunits,topunits"
                         style="top: 152px; left: 576px; width: 289px; height: auto; transform: translate3d(100px, 0px, 0px); transition-delay: 0.5s; transition-duration: 2s;"
                         data-observer-ready="true">
-                        <div class="tn-atom" field="tn_text_1684925590622" style="line-height: 39px;"><strong>14.30 -
-                                сбор гостей </strong></div>
+                        <div class="tn-atom" field="tn_text_1684925590622" style="line-height: 39px;"><strong>10.10 -
+                                роспись </strong></div>
                     </div>
                     <div class="t396__elem tn-elem tn-elem__8660833281737068099859 t-animate t-animate_started"
                         data-elem-id="1737068099859" data-elem-type="text" data-field-top-value="207"
@@ -7370,8 +7310,8 @@
                         data-fields="top,left,width,height,container,axisx,axisy,widthunits,leftunits,topunits"
                         style="top: 207px; left: 560px; width: 321px; height: auto; transform: translate3d(100px, 0px, 0px); transition-delay: 0.5s; transition-duration: 2s;"
                         data-observer-ready="true">
-                        <div class="tn-atom" field="tn_text_1737068099859" style="line-height: 20px;">Просим взять с
-                            собой хорошее настроение и улыбки</div>
+                        <div class="tn-atom" field="tn_text_1737068099859" style="line-height: 20px;">роспись по адресу
+                            г. Самара Молодогвардейская 238</div>
                     </div>
                     <div class="t396__elem tn-elem tn-elem__8660833281737068145898 t-animate t-animate_started"
                         data-elem-id="1737068145898" data-elem-type="text" data-field-top-value="352"
@@ -7388,8 +7328,8 @@
                         data-fields="top,left,width,height,container,axisx,axisy,widthunits,leftunits,topunits"
                         style="top: 352px; left: 560px; width: 321px; height: auto; transform: translate3d(-100px, 0px, 0px); transition-delay: 0.7s; transition-duration: 2s;"
                         data-observer-ready="true">
-                        <div class="tn-atom" field="tn_text_1737068145898" style="line-height: 20px;">Вы станете
-                            свидетелями трогательного момента. Приготовьте платочки</div>
+                        <div class="tn-atom" field="tn_text_1737068145898" style="line-height: 20px;">фотосессия с парой
+                            и катание по городу</div>
                     </div>
                     <div class="t396__elem tn-elem tn-elem__8660833281737068183415 t-animate t-animate_started"
                         data-elem-id="1737068183415" data-elem-type="text" data-field-top-value="517"
@@ -7441,8 +7381,8 @@
                         data-fields="top,left,width,height,container,axisx,axisy,widthunits,leftunits,topunits"
                         style="top: 297px; left: 576px; width: 289px; height: auto; transform: translate3d(-100px, 0px, 0px); transition-delay: 0.7s; transition-duration: 2s;"
                         data-observer-ready="true">
-                        <div class="tn-atom" field="tn_text_1737068032458" style="line-height: 39px;"><strong>15.00 -
-                                церемония</strong></div>
+                        <div class="tn-atom" field="tn_text_1737068032458" style="line-height: 39px;"><strong>11.00 -
+                                фотосессия</strong></div>
                     </div>
                     <div class="t396__elem tn-elem tn-elem__8660833281737068055348 t-animate t-animate_started"
                         data-elem-id="1737068055348" data-elem-type="text" data-field-top-value="462"
