--- a/index.html
+++ b/index.html
@@ -7490,7 +7490,7 @@
                 </div>
             </div>
         </div>
-        
+
         <div id="rec866083381" class="r t-rec" style="--zoom: 1;" data-animationappear="off" data-record-type="396">
             <!-- T396 -->
             <style>
@@ -8721,16 +8721,16 @@
             <!-- T396 -->
             <style>
                 #rec866083429 .t396__artboard {
-                    height: 1920px;
+                    height: 720px;
                     background-color: #ffffff;
                 }
 
                 #rec866083429 .t396__filter {
-                    height: 1920px;
+                    height: 720px;
                 }
 
                 #rec866083429 .t396__carrier {
-                    height: 1920px;
+                    height: 720px;
                     background-position: center center;
                     background-attachment: scroll;
                     background-size: cover;
@@ -8768,7 +8768,7 @@
                     #rec866083429 .t396__artboard,
                     #rec866083429 .t396__filter,
                     #rec866083429 .t396__carrier {
-                        height: 1890px;
+                        height: 720px;
                     }
 
                     #rec866083429 .t396__filter {}
@@ -8783,7 +8783,7 @@
                     #rec866083429 .t396__artboard,
                     #rec866083429 .t396__filter,
                     #rec866083429 .t396__carrier {
-                        height: 1810px;
+                        height: 720px;
                     }
 
                     #rec866083429 .t396__filter {}
@@ -9443,30 +9443,30 @@
             </style>
             <div class="t396">
                 <div class="t396__artboard rendered" data-artboard-recid="866083427"
-                    data-artboard-screens="320,480,640,960,1200" data-artboard-height="1920"
+                    data-artboard-screens="320,480,640,960,1200" data-artboard-height="920"
                     data-artboard-valign="center" data-artboard-upscale="grid" data-artboard-height-res-320="1810"
                     data-artboard-height-res-480="1890" data-artboard-proxy-min-offset-top="0"
-                    data-artboard-proxy-min-height="1920" data-artboard-proxy-max-height="1920">
+                    data-artboard-proxy-min-height="920" data-artboard-proxy-max-height="920">
                     <div class="t396__carrier" data-artboard-recid="866083427"></div>
                     <div class="t396__filter" data-artboard-recid="866083427"></div>
 
 
                     <div class="t396__elem tn-elem tn-elem__8660834271737106215495 t-animate t-animate_started"
-                        data-elem-id="1737106215499" data-elem-type="image" data-field-top-value="633"
+                        data-elem-id="1737106215499" data-elem-type="image" data-field-top-value="75"
                         data-field-left-value="248" data-field-height-value="705" data-field-width-value="705"
                         data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid"
                         data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value="px"
                         data-field-widthunits-value="px" data-animate-style="fadeinup" data-animate-duration="3"
                         data-animate-delay="1.9" data-animate-distance="100" data-animate-mobile="y"
                         data-field-filewidth-value="1680" data-field-fileheight-value="1680"
-                        data-field-top-res-320-value="783" data-field-left-res-320-value="-85"
+                        data-field-top-res-320-value="75" data-field-left-res-320-value="-85"
                         data-field-height-res-320-value="490" data-field-width-res-320-value="490"
-                        data-field-container-res-320-value="grid" data-field-top-res-480-value="621"
-                        data-field-left-res-480-value="-112" data-field-top-res-640-value="622"
-                        data-field-left-res-640-value="-32" data-field-top-res-960-value="635"
+                        data-field-container-res-320-value="grid" data-field-top-res-480-value="75"
+                        data-field-left-res-480-value="-112" data-field-top-res-640-value="75"
+                        data-field-left-res-640-value="-32" data-field-top-res-960-value="75"
                         data-field-left-res-960-value="128"
                         data-fields="img,width,filewidth,fileheight,top,left,container,axisx,axisy,widthunits,leftunits,topunits"
-                        style="left: 368px; top: 633px; width: 705px; transform: translate3d(0px, 100px, 0px); transition-delay: 1.9s; transition-duration: 3s;"
+                        style="left: 368px; top: 75px; width: 705px; transform: translate3d(0px, 100px, 0px); transition-delay: 1.9s; transition-duration: 3s;"
                         data-observer-ready="true">
                         <div class="tn-atom"> <img class="tn-atom__img t-img loaded"
                                 data-original="https://static.tildacdn.com/tild3930-3861-4264-b532-373366626132/line-10.png"
@@ -9475,7 +9475,7 @@
                     </div>
 
                     <div class="t396__elem tn-elem tn-elem__8660834271737106188258 t-animate t-animate_started"
-                        data-elem-id="1737106188259" data-elem-type="image" data-field-top-value="318"
+                        data-elem-id="1737106188259" data-elem-type="image" data-field-top-value="0"
                         data-field-left-value="390" data-field-height-value="419" data-field-width-value="419"
                         data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid"
                         data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value="px"
@@ -9494,62 +9494,41 @@
                                 src="./Приглашение на свадьбу _Наш день__files/photo(10).png"> </div>
                     </div>
                     <div class="t396__elem tn-elem tn-elem__8660834271737106188273 t-animate t-animate_started"
-                        data-elem-id="1737106188279" data-elem-type="text" data-field-top-value="617"
+                        data-elem-id="1737106188279" data-elem-type="text" data-field-top-value="270"
                         data-field-left-value="329" data-field-height-value="48" data-field-width-value="542"
                         data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid"
                         data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value="px"
                         data-field-widthunits-value="px" data-animate-style="fadeinup" data-animate-duration="3"
                         data-animate-delay="1.3" data-animate-distance="100" data-animate-mobile="y"
-                        data-field-textfit-value="autoheight" data-field-top-res-320-value="619"
+                        data-field-textfit-value="autoheight" data-field-top-res-320-value="270"
                         data-field-left-res-320-value="4" data-field-width-res-320-value="312"
                         data-field-left-res-480-value="19" data-field-width-res-480-value="442"
-                        data-field-top-res-640-value="600" data-field-left-res-640-value="49"
-                        data-field-top-res-960-value="611" data-field-left-res-960-value="209"
+                        data-field-top-res-640-value="270" data-field-left-res-640-value="49"
+                        data-field-top-res-960-value="270" data-field-left-res-960-value="209"
                         data-fields="top,left,width,height,container,axisx,axisy,widthunits,leftunits,topunits"
-                        style="top: 617px; left: 449px; width: 542px; height: auto; transform: translate3d(0px, 100px, 0px); transition-delay: 1.3s; transition-duration: 3s;"
+                        style="top: 270px; left: 449px; width: 542px; height: auto; transform: translate3d(0px, 100px, 0px); transition-delay: 1.3s; transition-duration: 3s;"
                         data-observer-ready="true">
                         <div class="tn-atom" field="tn_text_1737106188273" style="line-height: 24px;">Ваши пожелания в
                             конвертах будут лучшими подарками, которые помогут воплотить наши мечты.</div>
                     </div>
                     <div class="t396__elem tn-elem tn-elem__8660834271737125443743 t-animate t-animate_started"
-                        data-elem-id="1737125443749" data-elem-type="text" data-field-top-value="762"
+                        data-elem-id="1737125443749" data-elem-type="text" data-field-top-value="565"
                         data-field-left-value="356" data-field-height-value="144" data-field-width-value="488"
                         data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid"
                         data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value="px"
                         data-field-widthunits-value="px" data-animate-style="fadeinup" data-animate-duration="3"
                         data-animate-delay="1.7" data-animate-distance="100" data-animate-mobile="y"
-                        data-field-textfit-value="autoheight" data-field-top-res-320-value="791"
+                        data-field-textfit-value="autoheight" data-field-top-res-320-value="565"
                         data-field-left-res-320-value="-8" data-field-width-res-320-value="336"
-                        data-field-top-res-480-value="752" data-field-left-res-480-value="-4"
-                        data-field-top-res-640-value="754" data-field-left-res-640-value="76"
-                        data-field-top-res-960-value="765" data-field-left-res-960-value="236"
+                        data-field-top-res-480-value="565" data-field-left-res-480-value="-4"
+                        data-field-top-res-640-value="565" data-field-left-res-640-value="76"
+                        data-field-top-res-960-value="565" data-field-left-res-960-value="236"
                         data-fields="top,left,width,height,container,axisx,axisy,widthunits,leftunits,topunits"
-                        style="top: 762px; left: 476px; width: 488px; height: auto; transform: translate3d(0px, 100px, 0px); transition-delay: 1.7s; transition-duration: 3s;"
+                        style="top: 562px; left: 476px; width: 488px; height: auto; transform: translate3d(0px, 100px, 0px); transition-delay: 1.7s; transition-duration: 3s;"
                         data-observer-ready="true">
                         <div class="tn-atom" field="tn_text_1737125443743" style="line-height: 24px;">Чтобы праздничное
-                            настроение длилось дольше, предлагаем не дарить цветы в день торжества, а перевести эти
-                            средства в копилку цветочной подписки. После свадьбы Ваши цветы будут радовать нас долгое
-                            время!<br><br></div>
-                    </div>
-                    <div class="t396__elem tn-elem tn-elem__8660834271737106234322 t-animate t-animate_started"
-                        data-elem-id="1737106234329" data-elem-type="text" data-field-top-value="1061"
-                        data-field-left-value="392" data-field-height-value="144" data-field-width-value="416"
-                        data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid"
-                        data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value="px"
-                        data-field-widthunits-value="px" data-animate-style="fadeinup" data-animate-duration="3"
-                        data-animate-delay="2.1" data-animate-distance="100" data-animate-mobile="y"
-                        data-field-textfit-value="autoheight" data-field-top-res-320-value="1086"
-                        data-field-left-res-320-value="-23" data-field-height-res-320-value="138"
-                        data-field-width-res-320-value="367" data-field-top-res-480-value="1051"
-                        data-field-left-res-480-value="32" data-field-top-res-640-value="1072"
-                        data-field-left-res-640-value="112" data-field-top-res-960-value="1052"
-                        data-field-left-res-960-value="272"
-                        data-fields="top,left,width,height,container,axisx,axisy,widthunits,leftunits,topunits"
-                        style="top: 1061px; left: 512px; width: 416px; height: auto; transform: translate3d(0px, 100px, 0px); transition-delay: 2.1s; transition-duration: 3s;"
-                        data-observer-ready="true">
-                        <div class="tn-atom" field="tn_text_1737106234322" style="line-height: 24px;">Нам очень важно,
-                            чтобы каждый чувствовал себя комфортно, поэтому для вас будет организован трансфер к месту
-                            проведения свадьбы и обратно<br>(время и место сбора сообщим дополнительно)</div>
+                            настроение длилось дольше, предлагаем после банкета всем вместе продолжить отдыхать и
+                            переночевать в уютных коттеджах.<br><br></div>
                     </div>
 
                 </div>
@@ -9557,7 +9536,7 @@
             <script>t_onReady(function () { t_onFuncLoad('t396_init', function () { t396_init('866083427'); }); });</script>
             <!-- /T396 -->
         </div>
-        
+
         <div id="rec866083395" class="r t-rec" style="background-color: rgb(255, 255, 255); --zoom: 1;"
             data-animationappear="off" data-record-type="396" data-bg-color="#ffffff"> <!-- T396 -->
             <style>
@@ -10697,7 +10676,7 @@
             </style>
             <div class="t396">
                 <div class="t396__artboard rendered" data-artboard-recid="866083427"
-                    data-artboard-screens="320,480,640,960,1200" data-artboard-height="1920"
+                    data-artboard-screens="320,480,640,960,1200" data-artboard-height="920"
                     data-artboard-valign="center" data-artboard-upscale="grid" data-artboard-height-res-320="1810"
                     data-artboard-height-res-480="1890" data-artboard-proxy-min-offset-top="0"
                     data-artboard-proxy-min-height="1920" data-artboard-proxy-max-height="1920">
@@ -10751,7 +10730,8 @@
                         style="top: 170px; left: 538px; width: 364px; height: auto; transform: translate3d(0px, 100px, 0px); transition-delay: 0.5s; transition-duration: 3s;"
                         data-observer-ready="true">
                         <div class="tn-atom" field="tn_text_1737106155257" style="line-height: 24px;">В случае
-                            возникновения вопросов по торжеству, обращайтесь к нашему свадебному организатору Анжелике<br><br>+7 (996) 342-68-54</div>
+                            возникновения вопросов по торжеству, обращайтесь к нашему свадебному организатору
+                            Анжелике<br><br>+7 (996) 342-68-54</div>
                     </div>
 
 
