--- a/index.html
+++ b/index.html
@@ -5622,6 +5622,7 @@
                         data-observer-ready="true">
                         <div class="tn-atom"> <img class="tn-atom__img t-img loaded" alt=""
                                 imgfield="tn_img_1701274742939"
+                                data-original="https://i.postimg.cc/GmXKR3pc/2025.png"
                                 src="./Приглашение на свадьбу _Наш день__files/_2025.png"> </div>
                     </div>
                     <div class="t396__elem tn-elem tn-elem__8661004461737065347950 t-animate t-animate_started"
