--- a/index.html
+++ b/index.html
@@ -4864,7 +4864,7 @@
                         data-fields="img,width,filewidth,fileheight,top,left,container,axisx,axisy,widthunits,leftunits,topunits"
                         style="left: 583px; top: 333px; width: 469px; transform: translate3d(100px, 0px, 0px); transition-duration: 3s;">
                         <div class="tn-atom"> <img class="tn-atom__img t-img loaded"
-                                data-original="https://static.tildacdn.com/tild3330-3530-4435-b934-613431343663/photo.png"
+                                data-original="https://i.postimg.cc/jSBMXL0G/photo-1.png"
                                 alt="" imgfield="tn_img_1737065083903"
                                 src="./Приглашение на свадьбу _Наш день__files/photo(1).png"> </div>
                     </div>
@@ -7333,19 +7333,19 @@
                             и катание по городу</div>
                     </div>
                     <div class="t396__elem tn-elem tn-elem__8660833281737068145898 t-animate t-animate_started"
-                        data-elem-id="1737068145898" data-elem-type="text" data-field-top-value="458"
+                        data-elem-id="1737068145898" data-elem-type="text" data-field-top-value="390"
                         data-field-left-value="440" data-field-height-value="60" data-field-width-value="321"
                         data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid"
                         data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value="px"
                         data-field-widthunits-value="px" data-animate-style="fadeinright" data-animate-duration="2"
                         data-animate-delay="0.7" data-animate-distance="100" data-animate-mobile="y"
-                        data-field-textfit-value="autoheight" data-field-top-res-320-value="312"
+                        data-field-textfit-value="autoheight" data-field-top-res-320-value="390"
                         data-field-left-res-320-value="12" data-field-height-res-320-value="93"
                         data-field-width-res-320-value="296" data-field-left-res-480-value="79"
                         data-field-left-res-640-value="159" data-field-top-res-960-value="390"
                         data-field-left-res-960-value="319"
                         data-fields="top,left,width,height,container,axisx,axisy,widthunits,leftunits,topunits"
-                        style="top: 352px; left: 560px; width: 321px; height: auto; transform: translate3d(-100px, 0px, 0px); transition-delay: 0.7s; transition-duration: 2s;"
+                        style="top: 390px; left: 560px; width: 321px; height: auto; transform: translate3d(-100px, 0px, 0px); transition-delay: 0.7s; transition-duration: 2s;"
                         data-observer-ready="true">
                         <div class="tn-atom" field="tn_text_1737068145898" style="line-height: 20px;">Выездная церемония
                             и Велком зона с развлечениями для гостей по адресу Б.З</div>
@@ -7369,19 +7369,19 @@
                             танцев и поздравлений</div>
                     </div>
                     <div class="t396__elem tn-elem tn-elem__8660833281737068222494 t-animate t-animate_started"
-                        data-elem-id="1737068222494" data-elem-type="text" data-field-top-value="675"
+                        data-elem-id="1737068222494" data-elem-type="text" data-field-top-value="595"
                         data-field-left-value="475" data-field-height-value="40" data-field-width-value="248"
                         data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid"
                         data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value="px"
                         data-field-widthunits-value="px" data-animate-style="fadeinright" data-animate-duration="2"
                         data-animate-delay="1.1" data-animate-distance="100" data-animate-mobile="y"
-                        data-field-textfit-value="autoheight" data-field-top-res-320-value="587"
+                        data-field-textfit-value="autoheight" data-field-top-res-320-value="595"
                         data-field-left-res-320-value="55" data-field-height-res-320-value="93"
                         data-field-width-res-320-value="209" data-field-left-res-480-value="116"
                         data-field-left-res-640-value="196" data-field-top-res-960-value="595"
                         data-field-left-res-960-value="356"
                         data-fields="top,left,width,height,container,axisx,axisy,widthunits,leftunits,topunits"
-                        style="top: 662px; left: 595px; width: 248px; height: auto; transform: translate3d(-100px, 0px, 0px); transition-delay: 1.1s; transition-duration: 2s;"
+                        style="top: 595px; left: 595px; width: 248px; height: auto; transform: translate3d(-100px, 0px, 0px); transition-delay: 1.1s; transition-duration: 2s;"
                         data-observer-ready="true">
                         <div class="tn-atom" field="tn_text_1737068222494" style="line-height: 20px;">Спасибо, что
                             разделили с нами этот день</div>
@@ -7404,18 +7404,18 @@
                                 фотосессия</strong></div>
                     </div>
                     <div class="t396__elem tn-elem tn-elem__8660833281737068032458 t-animate t-animate_started"
-                        data-elem-id="1737068032458" data-elem-type="text" data-field-top-value="417"
+                        data-elem-id="1737068032458" data-elem-type="text" data-field-top-value="350"
                         data-field-left-value="456" data-field-height-value="40" data-field-width-value="289"
                         data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid"
                         data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value="px"
                         data-field-widthunits-value="px" data-animate-style="fadeinright" data-animate-duration="2"
                         data-animate-delay="0.7" data-animate-distance="100" data-animate-mobile="y"
-                        data-field-textfit-value="autoheight" data-field-top-res-320-value="257"
+                        data-field-textfit-value="autoheight" data-field-top-res-320-value="350"
                         data-field-left-res-320-value="15" data-field-left-res-480-value="95"
                         data-field-left-res-640-value="175" data-field-top-res-960-value="350"
                         data-field-left-res-960-value="335"
                         data-fields="top,left,width,height,container,axisx,axisy,widthunits,leftunits,topunits"
-                        style="top: 297px; left: 576px; width: 289px; height: auto; transform: translate3d(-100px, 0px, 0px); transition-delay: 0.7s; transition-duration: 2s;"
+                        style="top: 350px; left: 576px; width: 289px; height: auto; transform: translate3d(-100px, 0px, 0px); transition-delay: 0.7s; transition-duration: 2s;"
                         data-observer-ready="true">
                         <div class="tn-atom" field="tn_text_1737068032458" style="line-height: 39px;"><strong>15.00 -
                                 Церемония</strong></div>
@@ -9924,11 +9924,13 @@
                                     font-family: "1";
                                 }
                             </style>
+                            
 
+                            <div style="display: flex; justify-content: center;">
                             <iframe
                                 src="https://docs.google.com/forms/d/e/1FAIpQLSftaC3V_lImgcpI8Ksom6-t7e6W4E0Ro7K6ewuRGvWgkSMAlQ/viewform?embedded=true"
-                                width="640" height="1300" frameborder="0" marginheight="0"
-                                marginwidth="0">Загрузка…</iframe>
+                                width="419" height="1300" frameborder="0" marginheight="0"
+                                marginwidth="0">Загрузка…</iframe></div>
 
                             <style id="t-zero-form-btn-styles-1570289271162-866083395">
                                 #rec866083395 [data-elem-id="1570289271162"] .t-submit {
@@ -9955,16 +9957,16 @@
             <!-- T396 -->
             <style>
                 #rec866083427 .t396__artboard {
-                    height: 1920px;
+                    height: 1160px;
                     background-color: #ffffff;
                 }
 
                 #rec866083427 .t396__filter {
-                    height: 1920px;
+                    height: 1160px;
                 }
 
                 #rec866083427 .t396__carrier {
-                    height: 1920px;
+                    height: 1160px;
                     background-position: center center;
                     background-attachment: scroll;
                     background-size: cover;
@@ -10002,7 +10004,7 @@
                     #rec866083427 .t396__artboard,
                     #rec866083427 .t396__filter,
                     #rec866083427 .t396__carrier {
-                        height: 1890px;
+                        height: 1160px;
                     }
 
                     #rec866083427 .t396__filter {}
@@ -10017,7 +10019,7 @@
                     #rec866083427 .t396__artboard,
                     #rec866083427 .t396__filter,
                     #rec866083427 .t396__carrier {
-                        height: 1810px;
+                        height: 1160px;
                     }
 
                     #rec866083427 .t396__filter {}
@@ -10032,7 +10034,7 @@
                     top: 0px;
                     left: calc(50% - 600px + -220px);
                     width: 1640px;
-                    height: 454px;
+                    height: 1160px;
                 }
 
                 #rec866083427 .tn-elem[data-elem-id="1737106167687"] .tn-atom {
@@ -10737,19 +10739,19 @@
 
 
                     <div class="t396__elem tn-elem tn-elem__8660834271737106234326 t-animate t-animate_started"
-                        data-elem-id="1737106234326" data-elem-type="shape" data-field-top-value="1271"
+                        data-elem-id="1737106234326" data-elem-type="shape" data-field-top-value="500"
                         data-field-left-value="95" data-field-height-value="649" data-field-width-value="1010"
                         data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid"
                         data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value="px"
                         data-field-widthunits-value="px" data-animate-style="fadeinup" data-animate-duration="3"
                         data-animate-delay="2.3" data-animate-distance="100" data-animate-mobile="y"
-                        data-field-top-res-320-value="1264" data-field-left-res-320-value="-262"
+                        data-field-top-res-320-value="500" data-field-left-res-320-value="-262"
                         data-field-height-res-320-value="546" data-field-width-res-320-value="824"
-                        data-field-container-res-320-value="grid" data-field-top-res-480-value="1241"
+                        data-field-container-res-320-value="grid" data-field-top-res-480-value="500"
                         data-field-left-res-480-value="-265" data-field-left-res-640-value="-185"
                         data-field-left-res-960-value="-25"
                         data-fields="width,height,top,left,container,axisx,axisy,widthunits,heightunits,leftunits,topunits"
-                        style="width: 1010px; left: 215px; top: 1271px; height: 649px; transform: translate3d(0px, 100px, 0px); transition-delay: 2.3s; transition-duration: 3s;"
+                        style="width: 1010px; left: 215px; top: 500px; height: 649px; transform: translate3d(0px, 100px, 0px); transition-delay: 2.3s; transition-duration: 3s;"
                         data-observer-ready="true">
                         <div class="tn-atom t-bgimg"
                             style="background-image:url(&#39;https://static.tildacdn.com/tild3462-6538-4639-a237-373935636530/good-humored-blonde-.jpg&#39;);"
